# fractal-render

./: .gitignore  CMakeLists.txt  LICENSE  README.md  application.cpp  application.hpp  build2file  julia_set.hpp  main.cpp
build2/: bootstrap.build2  root.build2
